# sdk.device-manager-plugin-emul

./: AUTHORS  CMakeLists.txt  LICENSE  LICENSE.APLv2  LICENSE.Flora  NOTICE
debian/: changelog  control  device-manager-plugin-emul.install.in  rules
include/: devman_define_node_path.h  devman_plugin_intf.h
packaging/: device-manager-plugin-emul.spec  device-manager-plugin-maru.changes  device-manager-plugin-maru.spec  device-manager-plugin.spec
src/: device_manager_io.c  device_manager_plugin_emul.c  device_manager_plugin_maru.c
